# TestProj

./: .gitignore  readme.md  server.cxx  udp_client.cpp
Core/Inc/: udp_handler.h
Core/Src/: main.c  udp_handler.c
Server/: CMakeLists.txt
Server/src/: main.cpp
